--- a/Exercise/Ass1_March/restful-client/public_html/styles/main.css
+++ b/Exercise/Ass1_March/restful-client/public_html/styles/main.css
@@ -9,7 +9,7 @@
   overflow: auto;
 }
 body {
-    margin-top: 0;
+    margin-top: 40px;
 }
 /*====================================*/
 /*Navigation setting*/
@@ -42,9 +42,13 @@ body {
   display: none;
 }
 #cssmenu {
-  width: auto;
+  width: 100%;
   font-family: Raleway, sans-serif;
   line-height: 1;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1;
 }
 #cssmenu > ul {
   background: #3db2e1;
