Adapto new api, get user profile

--- a/Exercise/Ass2_April/Restful_Client_Android/app/src/main/res/layout/activity_profile.xml
+++ b/Exercise/Ass2_April/Restful_Client_Android/app/src/main/res/layout/activity_profile.xml
@@ -34,7 +34,7 @@
                     android:id="@+id/ivAvatarProfile"
                     android:layout_width="100dp"
                     android:layout_height="100dp"
-                    android:src="@drawable/img_feed_center_2"
+                    android:src="@drawable/avatar"
                     android:layout_centerHorizontal="true"
                     android:layout_marginTop="5dp" />
 
@@ -42,8 +42,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="Hieu Nguyen"
-                    android:id="@+id/textView"
+                    android:text="unknown"
+                    android:id="@+id/tvUsernameProfile"
                     android:layout_centerHorizontal="true"
                     android:gravity="center_horizontal"
                     android:layout_gravity="center_horizontal"
@@ -71,8 +71,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="nguyenkimtrunghieu@hotmail.com"
-                    android:id="@+id/textView3"
+                    android:text="unknown"
+                    android:id="@+id/tvEmailProfile"
                     android:layout_gravity="center_vertical"
                     android:textColor="#555555"
                     android:layout_marginLeft="20dp"
@@ -98,7 +98,7 @@
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:text="********"
-                    android:id="@+id/textView4"
+                    android:id="@+id/tvPassProfile"
                     android:layout_gravity="center_vertical"
                     android:textColor="#555555"
                     android:layout_marginLeft="20dp"
@@ -123,8 +123,8 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textAppearance="?android:attr/textAppearanceMedium"
-                    android:text="Ho Chi Minh City"
-                    android:id="@+id/textView2"
+                    android:text="unknown"
+                    android:id="@+id/tvAddressProfile"
                     android:layout_gravity="center_vertical"
                     android:textColor="#555555"
                     android:layout_marginLeft="20dp"
