--- a/Exercise/Ass2_April/Restful_Client_Android/app/src/main/res/layout/item_feed.xml
+++ b/Exercise/Ass2_April/Restful_Client_Android/app/src/main/res/layout/item_feed.xml
@@ -59,14 +59,14 @@
             android:id="@+id/tvDescription"
             android:layout_marginTop="5dp"
             android:layout_marginBottom="5dp"
-            android:background="#ffffff"
             android:layout_margin="5dp" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:paddingLeft="8dp"
-            android:paddingRight="8dp">
+            android:paddingRight="8dp"
+            android:background="@color/dim_foreground_disabled_material_dark">
 
             <ImageButton
                 android:id="@+id/btnLike"
