upload image, create new post, decorate GUI

--- a/Exercise/Ass2_April/Restful_Client_Android/app/src/main/res/layout/activity_view_image.xml
+++ b/Exercise/Ass2_April/Restful_Client_Android/app/src/main/res/layout/activity_view_image.xml
@@ -26,6 +26,7 @@
         android:id="@+id/ib_closeImageDetail"
         android:background="@drawable/btn_close_image"
         android:layout_margin="10dp"
-        android:layout_alignParentTop="true" />
+        android:layout_alignParentTop="true"
+        android:src="@drawable/btn_close" />
 
 </RelativeLayout>
