--- a/Exercise/Ass2_April/Restful_Client_Android/app/src/main/res/layout/item_feed.xml
+++ b/Exercise/Ass2_April/Restful_Client_Android/app/src/main/res/layout/item_feed.xml
@@ -73,7 +73,7 @@
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:background="@drawable/btn_feed_action"
-                android:src="@drawable/ic_heart_outline_grey"
+                android:src="@drawable/heart_passive"
                 android:scaleType="fitCenter"
                 android:layout_margin="0dp"
                 android:padding="10dp"
@@ -110,7 +110,7 @@
                 <ImageView
                     android:layout_width="30dp"
                     android:layout_height="30dp"
-                    android:src="@drawable/ic_heart_small_blue" />
+                    android:src="@drawable/heart_active" />
 
                 <TextSwitcher
                     android:id="@+id/tsLikesCounter"
