--- a/Exercise/Ass2_April/Restful_Client_Android/app/src/main/res/layout/content_profile.xml
+++ b/Exercise/Ass2_April/Restful_Client_Android/app/src/main/res/layout/content_profile.xml
@@ -5,8 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".ProfileActivi"
-    tools:showIn="@layout/activI_profile">
+    tools:context=".ProfileActivity"
+    tools:showIn="@layout/activity_profile">
 
     <TextView
         android:layout_width="wrap_content"
