--- a/Exercise/Ass2_April/Restful_Client_Android/app/src/main/res/values/colors.xml
+++ b/Exercise/Ass2_April/Restful_Client_Android/app/src/main/res/values/colors.xml
@@ -25,5 +25,7 @@
   <color name="material_indigo_500">#3F51B5</color>
   <color name="material_indigo_600">#3949AB</color>
   <color name="material_teal_a400">#1DE9B6</color>
+  <color name="edit_background">#4CAF50</color>
+  <color name="delete_background">#F44336</color>
 
 </resources>
