--- a/Exercise/Ass2_April/Restful_Client_Android/app/src/main/res/layout/actionbar_layout.xml
+++ b/Exercise/Ass2_April/Restful_Client_Android/app/src/main/res/layout/actionbar_layout.xml
@@ -11,7 +11,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
         android:text="News Feed"
-        android:id="@+id/textView2"
+        android:id="@+id/newsfeed"
         android:textColor="#ffffff"
         android:layout_gravity="center"
         android:layout_centerInParent="true"
@@ -32,7 +32,7 @@
     <ImageButton
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:id="@+id/settingNav"
+        android:id="@+id/logoutNav"
         android:scaleType="center"
         android:background="@drawable/logout"
         android:layout_alignParentRight="true"
