--- a/Exercise/Ass2_April/Restful_Client_Android/app/src/main/res/layout/activity_edit_profile.xml
+++ b/Exercise/Ass2_April/Restful_Client_Android/app/src/main/res/layout/activity_edit_profile.xml
@@ -41,7 +41,7 @@
                 android:id="@+id/textView3"
                 android:gravity="center_vertical" />
 
-            <EditText
+            <TextView
                 android:id="@+id/editUsername"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -49,7 +49,9 @@
                 android:gravity="center_vertical"
                 android:layout_marginLeft="20dp"
                 android:hint="Choose your uername"
-                android:textColorHint="#ababab" />
+                android:textColorHint="#ababab"
+                android:textSize="18sp"
+                android:textStyle="bold" />
         </LinearLayout>
 
         <LinearLayout
