--- a/Exercise/Ass2_April/Restful_Client_Android/app/src/main/res/layout/item_feed.xml
+++ b/Exercise/Ass2_April/Restful_Client_Android/app/src/main/res/layout/item_feed.xml
@@ -79,6 +79,27 @@
                 android:layout_gravity="center_vertical"
                 android:background="@drawable/btn_feed_action" />
 
+            <TextSwitcher
+                android:id="@+id/tsLikesCounter"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:inAnimation="@anim/slide_in_likes_counter"
+                android:outAnimation="@anim/slide_out_likes_counter"
+                android:layout_gravity="center_vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/text_like_counter" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/text_like_counter" />
+            </TextSwitcher>
+
             <ImageButton
                 android:id="@+id/btnComments"
                 android:layout_width="50dp"
@@ -90,49 +111,27 @@
                 android:padding="10dp"
                 android:layout_gravity="center_vertical" />
 
-            <ImageButton
-                android:id="@+id/btnMore"
-                android:layout_width="50dp"
-                android:layout_height="50dp"
-                android:background="@drawable/btn_feed_action"
-                android:src="@drawable/ic_more_grey"
-                android:scaleType="fitCenter"
-                android:layout_margin="0dp"
-                android:padding="10dp"
-                android:layout_gravity="center_vertical" />
-
-            <LinearLayout
+            <TextSwitcher
+                android:id="@+id/tsCommentCounter"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="1"
-                android:gravity="center_vertical|right">
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:inAnimation="@anim/slide_in_likes_counter"
+                android:outAnimation="@anim/slide_out_likes_counter"
+                android:layout_gravity="center_vertical" >
 
-                <ImageView
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:src="@drawable/heart_active" />
-
-                <TextSwitcher
-                    android:id="@+id/tsLikesCounter"
+                <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginRight="8dp"
-                    android:inAnimation="@anim/slide_in_likes_counter"
-                    android:outAnimation="@anim/slide_out_likes_counter">
+                    android:textColor="@color/text_like_counter" />
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="123 likes"
-                        android:textColor="@color/text_like_counter" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/text_like_counter" />
+            </TextSwitcher>
 
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:textColor="@color/text_like_counter" />
-                </TextSwitcher>
-            </LinearLayout>
         </LinearLayout>
 
     </LinearLayout>
